# Gtk1

./: CMakeLists.txt  README.md
gettext-0.10.40/: CMakeLists.txt  aclocal.m4  config.h  configure.in  intl_config.h.win32  libintl.h.win32
gettext-0.10.40/djgpp/: config.bat
gettext-0.10.40/intl/: bindtextdom.c  dcigettext.c  glib_ext.c  libintl.h  loadmsgcat.c  localealias.c
gettext-0.10.40/src/: gettext.c  msgcmp.c  msgcomm.c  msgfmt.c  msgmerge.c  msgunfmt.c  ngettext.c  xgettext.c
glib-2.2.1/: CMakeLists.txt
glib-2.2.1/glib/trio/: trio.c
glib-2.2.1/gmodule/: CMakeLists.txt
glib-2.2.1/gobject/: CMakeLists.txt
glib-2.2.1/gthread/: CMakeLists.txt
glib-2.2.1/po/: ru.po  sv.po
gtk+-1.3.0/: CMakeLists.txt  config.h
gtk+-1.3.0/examples/packer/: pack.c
gtk+-1.3.0/gdk/: CMakeLists.txt
gtk+-1.3.0/gdk/win32/: gdkevents-win32.c
gtk+-1.3.0/gtk/: CMakeLists.txt  gd.tmp  gtk-boxed.defs.tmp
gtk+-1.3.0/po/: ca.po  cs.po  da.po  de.po  el.po  es.po  et.po  eu.po  fi.po  fr.po  ga.po  gl.po  gtk+.pot  hr.po  hu.po  it.po  ja.po  ko.po  lt.po  nl.po  no.po  pl.po  pt.po  pt_BR.po  ru.po  sk.po  sl.po  sv.po  tr.po  uk.po  wa.po  zh_CN.GB2312.po  zh_TW.Big5.po
libiconv-1.8-w32-1/: CMakeLists.txt  Makefile.msvc  README.Perry
libiconv-1.8-w32-1/include/: iconv.h  iconv.h.win32
libiconv-1.8-w32-1/lib/: Makefile.msvc  config.h  config.h.msvc  config.h.win32  gentranslit.c  iconv.c  loop_unicode.h  translit.def  translit.h
libiconv-1.8-w32-1/lib/msvcgentranslit/: msvcgentranslit.dsp  msvcgentranslit.dsw
libiconv-1.8-w32-1/libcharset/lib/: Makefile.msvc
libiconv-1.8-w32-1/src/: Makefile.msvc
libiconv-1.8-w32-1/windows/: iconv.rc
